[build-system] # Require setuptool version due to https://github.com/pypa/setuptools/issues/2938
requires = ["setuptools>=61.0.0", "wheel"]

[project]
name = "drug_database"
version = "0.1.2"
description = "Tool for getting scaling factors from different drugs"
authors = [{name = "Henrik Finsberg", email = "henriknf@simula.no"}]
license = {file = "LICENSE"}
readme = "README.md"
dependencies = [
    "typer",
    "rich"
]

[project.scripts]
drug-db = "drug_database.cli:app"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
]
dev = [
    "pdbpp",
    "ipython",
    "bump2version",
    "pre-commit",
]
docs = [
   "jupyter-book",
   "jupytext",
   "plotly",
   "ipython<8.7.0"
]
all = [
   "drug_database[test]",
   "drug_database[docs]",
   "drug_database[dev]"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
drug_database = ["drug_factors.json"]

[tool.pytest.ini_options]
addopts = [
   "--import-mode=importlib",
   "--cov=drug_database",
   "--cov-report=html",
   "--cov-report=term-missing",
   "-v"
]

testpaths = [
    "tests"
]
